# IG_Project

./: .gitignore
sampleProject/: CMakeLists.txt  main.cpp
sfmlGraphicsPipeline/: CMakeLists.txt
sfmlGraphicsPipeline/extlib/: Makefile
sfmlGraphicsPipeline/include/: HierarchicalRenderable.hpp  Renderable.hpp  ShaderProgram.hpp  Viewer.hpp
sfmlGraphicsPipeline/include/dynamics/: Particle.hpp  ParticleListRenderable.hpp  ParticleParticleCollision.hpp  ParticlePlaneCollision.hpp  ParticleRenderable.hpp
sfmlGraphicsPipeline/include/lighting/: LightedMeshRenderable.hpp  Material.hpp
sfmlGraphicsPipeline/include/texturing/: TexturedLightedMeshRenderable.hpp
sfmlGraphicsPipeline/meshes/: fondo1
sfmlGraphicsPipeline/shaders/: billboardFragment.glsl  billboardVertex.glsl  multiTextureFragment.glsl  phongFragment.glsl  phongVertex.glsl  simpleTextureFragment.glsl  simpleTextureVertex.glsl
sfmlGraphicsPipeline/src/: Camera.cpp  HierarchicalRenderable.cpp  KeyframeCollection.cpp  MeshRenderable.cpp  Renderable.cpp  ShaderProgram.cpp  Viewer.cpp
sfmlGraphicsPipeline/src/dynamics/: ControlledForceFieldRenderable.cpp  DynamicSystem.cpp  DynamicSystemRenderable.cpp  Particle.cpp  ParticleListRenderable.cpp  ParticleParticleCollision.cpp  ParticlePlaneCollision.cpp  ParticleRenderable.cpp
sfmlGraphicsPipeline/src/lighting/: LightedMeshRenderable.cpp  Material.cpp
sfmlGraphicsPipeline/src/texturing/: MipMapCubeRenderable.cpp  TexturedLightedMeshRenderable.cpp  TexturedPlaneRenderable.cpp  TexturedTriangleRenderable.cpp
